Fixing alignment

--- a/src/app/letterboard/controlboard.component.scss
+++ b/src/app/letterboard/controlboard.component.scss
@@ -25,6 +25,7 @@
 
   .end-game-wrapper {
     display: block;
+    text-align: center;
 
     .end-game {
       font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
